# bitcaviar-plus

./: .gitignore  CHANGELOG.md  DOCS.md  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  setup.cfg  test_block_0.json
.github/workflows/: python-publish.yml
src/: block.py  block_structure.py  helpers.py
src/bitcaviar_plus/: block.py  block_structure.py  errors.py  search.py
src/puppy/: block.py  block_structure.py  helpers.py
tests/: implementation_testing.py  test_app.py  test_block.py  test_implementation.py  test_unit.py
