[metadata]
name = bitcaviar-plus
version = 0.0.2
author = Dennis Concepcion Martin
author_email = dennisconcepcionmartin@gmail.com
description = A Bitcoin blockchain parser written in Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denniscm190/bitcaviar-plus
project_urls =
    Bug Tracker = https://github.com/denniscm190/bitcaviar-plus/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src